--- a/DataAnalystJobs.ipynb
+++ b/DataAnalystJobs.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What size company and location provides the best prospects for Data Analyst position?\n",
-    "    #Salary Expectations: Which companies and locations have the best salary expections?\n",
-    "    #Positions: #Is there correlation between position and salary offered by the company?"
+    "# What are the job prospects for becoming a Data Analyst?\n",
+    "    \n",
+    "    #Which companies and locations have the best salary expections? ratings?\n",
+    "    #Correlation between Job Title and salary offered by the company?\n",
+    "    #Correlation between the size of the company and the salary?\n",
+    "    #Correlation between the ratings and salary?\n",
+    "    "
    ]
   },
   {
@@ -1144,7 +1148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data analysis"
+    "# Data Visualization"
    ]
   },
   {
